# Tokenizer

./: .gitignore  Makefile  README.md
contracts/tokens/: Cargo.toml  Makefile
contracts/tokens/src/: contract.rs  lib.rs  tests.rs
contracts/tokens/src/core/: token.rs
contracts/tokens/src/events/: handler.rs
contracts/tokens/src/storage/: types.rs
